--- a/css/demo.css
+++ b/css/demo.css
@@ -58,13 +58,12 @@ nav:not(.mm-menu)
 	font-weight: bold;
 	color: #fff;
 	line-height: 40px;
-
+    padding-top: 25px;
 
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;	
 	width: 100%;
 	height: 50px;
-	padding: 0 50px;
 }
 .header.fixed
 {
@@ -82,15 +81,14 @@ nav:not(.mm-menu)
 {
 	background: center center no-repeat transparent;
 	background-image: url( data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAADhJREFUeNpi/P//PwOtARMDHQBdLGFBYtMq3BiHT3DRPU4YR4NrNAmPJuHRJDyahEeT8Ii3BCDAAF0WBj5Er5idAAAAAElFTkSuQmCC );
-
+    margin-top: 25px;
 	display: block;
 	width: 40px;
 	height: 40px;
 	position: absolute;
-	top: -5px;
+	top: 0px;
 	left: 10px;
 }
 .content
 {
-	padding: 50px 50px 50px 50px;
 }
