--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,22 @@ html,body{height:100%;}
     max-width: 600px;
     margin-top: 25px;
 }
+.mm-listview {
+    font-size: 0.7em;
+    line-height: 70px;
+}
 .center{
     text-align: center;
 }
 .space50{
     margin-top: 50px;
     margin-bottom: 50px;
+}
+.top50{
+    margin-top: 50px;
+}
+.top100{
+    margin-top: 100px;
 }
 .bigfont{
     font-size: 2em;
@@ -24,8 +34,7 @@ html,body{height:100%;}
     background-repeat: no-repeat;
     background-position: top center;
     
-    height: 30px;
-    margin-top:   5px;
+    height: 50px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 25px;
@@ -41,6 +50,9 @@ html,body{height:100%;}
 .logoklein{
     height: 40px;
 }
+nav{
+    font-size: 2em;
+}
 .circle{
     width: 5px;
     height: 5px;
@@ -51,7 +63,13 @@ html,body{height:100%;}
     -webkit-border-radius: 100%;
     border-radius: 100%;
 }
-
+.iconmenu{
+    height: 20px;
+    margin-right: 20px;
+}
+.dark{
+    background-color: #eaeaea;
+}
 .logogroot{
     background: url(../images/logogroot.png) no-repeat center center;
     height: 90%;
@@ -117,8 +135,6 @@ font-size: 0.8em;
     border-radius: 0;
     text-shadow: none;
     box-shadow: none;
-    padding-right: 1.5em;
-    padding-left: 1.5em;
     font-weight: bold;
     width: 500px;
     height: 100px;
@@ -144,7 +160,7 @@ display: block;
   border-radius: 50%;
   box-shadow: 0px 3px 8px #aaa, inset 0px 2px 3px #fff;
 }
-}
+
 a.knop:hover {
   text-decoration: none;
   color: #555;
@@ -157,10 +173,13 @@ a.knop:hover {
     border-radius: 0;
     background: none;
     border: none;
-    background-color: #3498db;
+    border-bottom: 2px solid white;
     color: white;
-    padding: 1.5em;
-    
+    padding-top: 3em;
+    padding-right: 1em;
+    padding-left: 1em;
+    padding-bottom: 1em;
+    box-shadow: none;
 }
 .form-control::-webkit-input-placeholder {
    color: white;
