nav werkt terug

--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ display: block;
 a.knop:hover {
   text-decoration: none;
   color: #555;
-  background: #f0f;
+  background: #fff;
 }
 .light{
     background-color: #3498db;
