--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ body{
     font-family: 'Open Sans', sans-serif;
 }
 html,body{height:100%;}
+
+input{
+    outline:none;
+}
 .h4{
     font-size: 2em;
     font-family: 'Open Sans', Arial, sans-serif;
