--- a/css/style.css
+++ b/css/style.css
@@ -177,13 +177,18 @@ font-size: 0.8em;
     height: 120px;
     padding-top: 20px;
 }
-
-
-a.knop:hover {
-  text-decoration: none;
-  color: #555;
-  background: #fff;
+.containericonen{
+    
+    padding-right: 15px;
+    padding-left: 15px;
+    clear: both;
+    margin-right: auto;
+    margin-left: auto;
+    height: 120px;
+    padding-top: 20px;
 }
+
+
 .light{
     background-color: rgba(0, 0, 0, 0.3);
     display: block;
@@ -270,8 +275,30 @@ a.knop:hover {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
 }
+.knopwhist{
+	width: 230px;
+	height: 230px;
+	display: inline-block;
+	position: relative;
+    line-height: 64px;
+}
+
+.knopwhist:focus
+{
+	-webkit-animation-name: thumb;
+	-webkit-animation-duration: 200ms;
+	-webkit-transform-origin:50% 50%;
+	-webkit-animation-iteration-count: 2;
+	-webkit-animation-timing-function: linear;
+}
+@-webkit-keyframes thumb {
+	0% { -webkit-transform: scale(1); }
+	50% { -webkit-transform: scale(0.9); }
+	100% { -webkit-transform: scale(1); }
+}
+/*
 a.knop{
-    margin-top: 50px;
+    margin-top: 10px;
 	width: 200px;
 	height: 200px;
 	display: inline-block;
@@ -291,7 +318,11 @@ a.knop{
 	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .25), 0 2px 3px rgba(0, 0, 0, .1);
 	box-shadow: 0 1px 1px rgba(0, 0, 0, .25), 0 2px 3px rgba(0, 0, 0, .1);
 }
-
+a.knop:hover {
+  text-decoration: none;
+  color: #555;
+  background: #fff;
+}
 a.knop:active {
 	top: 1px;
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#eaeaea), to(#f6f6f6));
@@ -326,12 +357,12 @@ a.knop:hover::before {
 a.knop:hover::before {
 	background-color: #2ecc71;
 }
-
+*/
 .card-yellow {
   border: none;  
   
-  height: 100px;
-width:  100px;
+  height: 60px;
+width:  60px;
     background-image: url(../images/yellow.svg);
 background-color: none;
     margin-top: 140px;
@@ -340,8 +371,8 @@ background-color: none;
 .card-red {
     border: none;  
   
-  height:  100px;
-width:  100px;
+  height:  60px;
+width:  60px;
     background-image: url(../images/red.svg);
 background-color: none;
     margin-top: 140px;
@@ -350,8 +381,8 @@ background-color: none;
 .card-goal {
   border: none;  
   
-  height: 100px;
-width:  100px;
+  height: 60px;
+width:  60px;
     background-image: url(../images/ballwhite.svg);
 background-color: none;
   border-radius: 10px;
@@ -360,13 +391,61 @@ background-color: none;
 }
 
 .card-offside {
+    border: none;  
+    height: 60px;
+    width:  60px;
+    background-image: url(../images/flag.svg);
+    background-color: none;
+    margin-top: 140px;
+
+}
+.scard-yellow {
+    margin-top: 20px;
+    border: none;  
+    height: 100px;
+    width:  100px;
+    background-image: url(../images/yellow.svg);
+    background-color: none;
+    bottom: 0px;
+    font-weight: 100;
+        font-size: 2em;
+
+}
+
+.scard-red {
+    margin-top: 20px;
+    border: none;  
+    height:  100px;
+    width:  100px;
+    background-image: url(../images/red.svg);
+    background-color: none;
+    font-weight: 100;
+    font-size: 2em;
+}
+
+
+
+
+.scard-goal {
+  border: none;  
+  
+  height: 60px;
+width:  60px;
+    background-image: url(../images/ballwhite.svg);
+background-color: none;
+  border-radius: 10px;
+    margin-top: 40px;
+
+}
+
+.scard-offside {
    border: none;  
   
-  height:  100px;
-width:  100px;
+  height:  60px;
+width:  60px;
     background-image: url(../images/flag.svg);
 background-color: none;
-    margin-top: 140px;
+    margin-top: 40px;
 
 }
 .bottom{
