--- a/css/demo.css
+++ b/css/demo.css
@@ -38,6 +38,11 @@ p
 a, a:link, a:active, a:visited, a:hover
 {
 	color: inherit;
+        text-decoration: none;
+}
+.btn-default.active, .btn-default:active {
+    background-color: #fff;
+    border-color: #fff;
 }
 
 nav:not(.mm-menu)
