--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ input{
 }
 .bigfont{
     font-size: 2em;
+    margin-top: -50px;
 }
 .maxwidth150{
     max-width: 150px;
@@ -541,7 +542,9 @@ footer{
 
 #madewithlove {
     text-align: center;
-    opacity: 0.5;
+    color: #0067b0;
+    font-size: 0.7em;
+    font-weight: 100;
 
 }
 .marginleftright{
@@ -700,4 +703,24 @@ footer{
 .noback{
     background: none;
     border: none;
+}
+.circular {    
+ display: block;
+  width: 150px;
+  height: 150px;
+  margin: 1em auto;
+    background-image: url(../images/profile.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-border-radius: 99em;
+  -moz-border-radius: 99em;
+  border-radius: 99em;
+  border: 5px solid #eee;
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);  
+	}
+.stripe{
+background-image: linear-gradient(transparent 50%, rgba(255,255,255,.1) 50%);
+background-size: 218px 218px;
+background-position: center -10px;
 }
