--- a/css/demo.css
+++ b/css/demo.css
@@ -85,14 +85,14 @@ nav:not(.mm-menu)
 .header a
 {
 	background: center center no-repeat transparent;
-	background-image: url( data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAADhJREFUeNpi/P//PwOtARMDHQBdLGFBYtMq3BiHT3DRPU4YR4NrNAmPJuHRJDyahEeT8Ii3BCDAAF0WBj5Er5idAAAAAElFTkSuQmCC );
+	background-image: url(../images/menu.svg);
     margin-top: 25px;
 	display: block;
-	width: 40px;
-	height: 40px;
+	width: 35px;
+	height: 50px;
 	position: absolute;
-	top: 0px;
-	left: 10px;
+	top: 5px;
+	right: 26px;
 }
 .content
 {
